[package]
name = "operator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "../LICENSE"

[dependencies]
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "=0.23.0", features = ["v1_27"] }
kube-runtime = "0.96.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
futures = "0.3"
schemars = "0.8"
log = "0.4"
fern = "0.6"
anyhow = "1.0"
chrono = "0.4.31"
base64 = "0.13"
openssl = { version = "0.10", features = ["vendored"] }
kube-leader-election = "0.37.0"

crd_templator = { path = "../crd-templator" }
env_common = { path = "../env_common" }
env_utils = { path = "../utils" }
env_aws = { path = "../env_aws" }
env_defs = { path = "../defs" }

# TODO: refactor aws-specific code to remove these dependencies
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.15.0"
aws-sdk-sns = "1.16.0"
aws-sdk-sqs = "1.15.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
k8s-openapi = { version = "=0.23.0", features = ["v1_27"] }
