[package]
name = "operator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[package.metadata.cross.build.env]
passthrough = ["K8S_OPENAPI_ENABLED_VERSION"]

[dependencies]
kube = { workspace = true }
k8s-openapi = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
rustls-pemfile = "2.0"
kube-leader-election = "0.37.0"
axum = "0.8.1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
openssl = { version = "0.10", features = ["vendored"] }

crd_templator = { path = "../crd-templator" }
env_common = { path = "../env_common" }
env_utils = { path = "../utils" }
env_defs = { path = "../defs" }

[dev-dependencies]
pretty_assertions = { workspace = true }
tower = { workspace = true }
