[package]
name = "reconciler"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
log = { workspace = true }
lambda_runtime = { workspace = true }
futures = { workspace = true }
openssl = { workspace = true }

[lib]
name = "reconciler"
path = "src/lib.rs"
