[package]
name = "reconciler"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "*"
env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
lambda_runtime = "0.13.0"
futures = "0.3.31"

[lib]
name = "reconciler"
path = "src/lib.rs"
