[package]
name = "terraform_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tera = "1.15.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde_json = "*"
env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
anyhow = "1.0"
log = "0.4"
nanoid = "0.4.0"
convert_case = "0.6.0"
reqwest = { version = "0.11", features = ["json"] }

[lib]
name = "terraform_runner"
path = "src/lib.rs"