[package]
name = "terraform_runner"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tera = "1.15.0"
tokio = { version = "1", features = ["full"] }
serde_json = "*"
anyhow = "1.0"
log = "0.4"
nanoid = "0.4.0"
convert_case = "0.6.0"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.31"

env_common = { path = "../env_common" }
env_aws = { path = "../env_aws" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[lib]
name = "terraform_runner"
path = "src/lib.rs"