[package]
name = "terraform_runner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }

env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils", features = ["otel"] }
tracing = "0.1"

[lib]
name = "terraform_runner"
path = "src/lib.rs"
