[package]
name = "env_utils"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
zip = { workspace = true }
walkdir = { workspace = true }
hcl-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
jsonschema = "0.16"
serde_yaml = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
heck = "0.5"
fern = { workspace = true }
log = { workspace = true }
flate2 = "1.1"
tar = "0.4"
sha2 = { workspace = true }
oci-distribution = "0.11.0"
sigstore = "0.12.0"
base64 = { workspace = true }
regorus = "0.4.0"
tempfile = { workspace = true }
bollard = "0.19.4"
uuid = "1.17"
futures-util = "0"
tokio = { workspace = true }
tokio-util = "0.7.16"
bytes = "1.10.1"

env_defs = { path = "../defs" }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
