[package]
name = "env_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[package.metadata.cargo-machete]
ignored = ["hcl-rs"]

[features]
# Pulls in OpenTelemetry + tracing-subscriber so binaries can call
# `otel_tracing::init_tracing`. Off by default to keep the dep tree light
# for utility-only consumers (cli, gitops, etc.).
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-opentelemetry",
]

[dependencies]
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }
zip = "0.6.6"
walkdir = "2.3"
hcl-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
jsonschema = { workspace = true }
serde_yaml = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
heck = "0.5"
fern = { workspace = true }
log = { workspace = true }
flate2 = "1.1"
tar = "0.4"
sha2 = { workspace = true }
oci-distribution = "0.11.0"
base64 = { workspace = true }
regorus = "0.4.0"
tempfile = { workspace = true }
bollard = { workspace = true }
uuid = { workspace = true }
futures-util = "0"
tokio = { workspace = true }
tokio-util = "0.7.16"
deunicode = "1.6"

env_defs = { path = "../defs" }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
