[package]
name = "webserver-openapi"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
tower = "0.4"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
rustls = "0.23.18"

env_defs = { path = "../defs", features = ["openapi"] }
env_common = { path = "../env_common" }
env_utils = { path = "../utils" }
