[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
# AWS
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.15.0"
serde_json = "1.0"

chrono = "0.4"