[package]
name = "infrabridge_operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["v1_27"] }
kube-runtime = "0.88.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
futures = "0.3"
schemars = "0.8"
log = "0.4"
fern = "0.6"
chrono = "0.4.31"
crd_templator = { path = "../crd-templator" }
env_aws = { path = "../environments/aws" }

# TODO: refactor aws-specific code to remove these dependencies
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.15.0"
aws-sdk-sns = "1.16.0"
aws-sdk-sqs = "1.15.0"