[package]
name = "env_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.15.0"
aws-sdk-sns = "1.16.0"
aws-sdk-sqs = "1.15.0"
serde_json = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
